# resting

./: .gitignore  LICENSE  README.md  pyproject.toml
resting/: __init__.py  cli.py  errors.py  history.py  output.py  script.py  session.py  tests.py  utils.py
resting/cli/: script.py
